WIP Merged with master Renamed classes around implicit and explicit property building Added additional extensions to extensions pom Extensions should depend on current project version Re-worked named typemaps Removed unused test